# slider-captcha-lab

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  authorized_gui_tester.py  behavior_gui.py  build_exe.bat  gui_app.py  liuhen.py  pyproject.toml  renovate.json  report_center.py  requirements.txt  risk_gui.py  slider_lab.py  start_liuhen.bat
demo/: event_diagnostics.html  event_diagnostics.js  index.html  slider.js  style.css
docs/: authorized-boundary-audit.json  authorized-boundary-audit.md  authorized-evidence-pack-local-demo.json  authorized-evidence-pack-local-demo.md  cdp-authorized-diagnostics.md  deep-page-map.md  dependency-inventory.json  dependency-inventory.md  evidence-manifest.json  evidence-manifest.md  fingerprint-defense-matrix.md  lux-net-dev-reference.md  profile-policy-report.json  profile-policy-report.md  research-notes.md  safety-contract.json  safety-contract.md  target-surface-registry.json  target-surface-registry.md  v0.3.0-release-notes.md  v0.4.0-release-notes.md  v0.5.0-release-notes.md
examples/: attached_chrome_profile.json  authorized_deep_page_profile.json  generate_trajectory.py
profiles/: local_demo.json
scripts/: authorized_boundary_audit.py  cdp_attach_smoke.py  dependency_inventory.py  evidence_manifest.py  evidence_pack.py  local_trace_artifacts.py  profile_policy.py  regression_check.py  safety_contract.py  smoke_check.py  start-authorized-chrome-cdp.ps1  target_surface_registry.py
src/: analyzer.py  authorized_page_tester.py  browser_context.py  browser_drag_demo.py  cdp_diagnostics.py  chrome_session.py  env_check.py  (+8 more)
(+4 files in other folders)
